# note-to-self

./: .gitignore  .gitleaks.toml  .oss-twin.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  _typos.toml  leakguard.yaml  osv-scanner.toml  textleaks.yaml
.github/: dependabot.yml
.github/workflows/: security-scan.yml  test.yml
docs/: architecture.md  research.md  roadmap.md
docs/handoffs/: 2026-05-13_m4b-mac-iphone-shipped.md
docs/superpowers/plans/: 2026-03-10-milestone1-cli.md  2026-03-10-milestone2-r2-sync.md  2026-03-12-milestone3-ntfy-notifications.md  2026-05-11-milestone4a-pwa-plan.md
docs/superpowers/specs/: 2026-03-10-milestone1-cli-design.md  2026-03-10-milestone2-r2-sync-design.md  2026-03-12-milestone3-ntfy-notifications-design.md  2026-05-11-milestone4-pwa-design.md
scripts/: generate-ciphertext-fixtures.sh
src/: config.rs  crypto.rs  device.rs  display.rs  helpers.rs  index.rs  main.rs  merge.rs  message.rs  notify.rs  secret.rs  sync.rs  sync_state.rs
src/commands/: ack.rs  config_cmd.rs  delete.rs  device.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  notify_cmd.rs  peek.rs  pop.rs  purge.rs  push.rs  search.rs  show.rs  status.rs  sync_cmd.rs
src/storage/: local.rs  mod.rs  r2.rs
tests/: integration.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: app.tsx  main.tsx  service-worker.ts
web/worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
(+43 files in other folders)
