[package]
name = "nts"
version = "0.1.0"
edition = "2024"

[dependencies]
age = { version = "0.11", features = ["armor"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
directories = "6"
colored = "3"
anyhow = "1"
secrecy = "0.10"
shellexpand = "3"
atty = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
